--- a/blog/templates/html/home.html
+++ b/blog/templates/html/home.html
@@ -1,22 +1,17 @@
 {% extends 'html/base.html' %}
-  {% block content %}
-  <div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text">With textarea</span>
-    </div>
-    <textarea class="form-control" aria-label="With textarea"></textarea>
-  </div>
+{% block content %}
+  <a class="btn btn-primary mx-auto d-block" href="{% url 'post-new' %}">Pika post</a>
   {% for post in posts %}
   <div class="card">
     <div class="card-header">
-      Quote
+      <img height="100" width="100" class="float-left rounded-circle" src="{{ post.author.profile.image.url }}" alt="Profile Picture">
     </div>
     <div class="card-body">
-      <blockquote class="blockquote mb-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-      </blockquote>
+      <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5>
+      <p class="card-text">{{ post.post }}</p>
+      <small>{{ post.date|date:"Y-M-d h:i A" }}</small>
     </div>
   </div>
+  <br>
   {% endfor %}
 {% endblock content %}
